# theory-of-automata

./: CMakeLists.txt  functions.cpp  functions.h  input.txt  main.cpp  result.txt  stattable.ods
flex/: flex_recognizer.cpp  flex_recognizer.h  input.txt  lex.yy.cc  parser.l  result.txt  scaner.l
flex/test_data/: testsData_100_nums.txt  testsData_12800_nums.txt  testsData_1600_nums.txt  testsData_200_nums.txt  testsData_25600_nums.txt  testsData_3200_nums.txt  testsData_400_nums.txt  testsData_50_nums.txt  testsData_6400_nums.txt  testsData_800_nums.txt  timer_Regex.txt  timer_flex.txt
generator/: generator.cpp  generator.h
regex/: regex_recognizer.cpp  regex_recognizer.h
regex/test_data/: testsData_100_nums.txt  testsData_12800_nums.txt  testsData_1600_nums.txt  testsData_200_nums.txt  testsData_25600_nums.txt  testsData_3200_nums.txt  testsData_400_nums.txt  testsData_50_nums.txt  testsData_6400_nums.txt  testsData_800_nums.txt  timer_Regex.txt  timer_regex.txt
smc/: AppClass.cpp  AppClass.h  AppClass.sm  AppClass_sm.cpp  AppClass_sm.h
statistics/: recognizer.h  statistics.cpp  statistics.h
